--- a/src/Modules/MasterModule/Views/Clients/ReplacementCard.xaml
+++ b/src/Modules/MasterModule/Views/Clients/ReplacementCard.xaml
@@ -1,27 +1,17 @@
-﻿<UserControl
+﻿<UserControl x:Class="MasterModule.Views.Clients.ReplacementCard"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MasterModule.Views.Clients"
-             xmlns:KarveControls="clr-namespace:KarveControls;assembly=KarveControls" xmlns:syncfusion="http://schemas.syncfusion.com/wpf" x:Class="MasterModule.Views.Clients.OtherData"
+             xmlns:KarveControls="clr-namespace:KarveControls;assembly=KarveControls"
              mc:Ignorable="d" 
-             d:DesignHeight="700" d:DesignWidth="900">
+             d:DesignHeight="300" d:DesignWidth="400">
     <Grid>
-        <GroupBox Header="Facturacion">
+        <GroupBox Header="Tarjeta de Sustitución">
             <StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <KarveControls:DataField LabelText="Riesgo" TextContentWidth="100" LabelTextWidth="100" Height="25"/>
-                    <KarveControls:DataField LabelText="$"  Margin="5,0,0,5" TextContentWidth="300" Height="25"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal">
-                    <KarveControls:DataField LabelText="Importe Pendiente" TextContentWidth="100" Height="25"/>
-                    <KarveControls:DataField LabelText="Plazo Pago" TextContentWidth="100" Height="25" Margin="5,0,0,5"/>
-                    <KarveControls:DataDatePicker LabelText="Dia Pago" Height="40" Width="200" />
-
-                </StackPanel>
-                <KarveControls:DualFieldSearchBox x:Name="FormaDeCobro" 
-                                           LabelText="Forma de cobros:" 
+            <KarveControls:DualFieldSearchBox x:Name="TipoTarjeta" 
+                                           LabelText="Tipo Tarjeta" 
                                           Height="25" 
                                           Margin="0,5,0,0"
                                           AssistDataFieldFirst="NUM_PROVEE"
@@ -39,20 +29,18 @@
                                           TextContentFirstWidth="60" 
                                           TextContentSecondWidth="150"
                                           ButtonImage="/KarveCar;component/Images/search.png"/>
-                <KarveControls:DataField LabelText="Cuenta" 
-                                         LabelTextWidth="100"
-                                         TextContentWidth="300" Height="25" Margin="0,0,0,5"/>
-                <StackPanel Orientation="Horizontal">
-                    <KarveControls:DataField LabelTextWidth="100" 
-                                             LabelText="Descuento" 
-                                             TextContentWidth="100" Height="25" Margin="5,0,0,5"/>
-                    <TextBlock Text="Saldo" Margin="5,0,0,0" Width="49.483"></TextBlock>
-                    <syncfusion:CurrencyTextBox CurrencyGroupSeparator="," CurrencyDecimalSeparator="." CurrencySymbol="" Height="23" TextWrapping="Wrap" 
-                                                Text="Saldo" Value="1.00" VerticalAlignment="Stretch" Width="119"/>
-
-                                    </StackPanel>
-                <KarveControls:DualFieldSearchBox x:Name="CuentaContable" 
-                                           LabelText="Cuenta Contable" 
+                <KarveControls:DataField  DataSourcePath="NOMBRE" 
+                                                      DataObject="{Binding  DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                                                      LabelText="Tipo empleado"
+                                                      LabelTextWidth="100"
+                                                      TextContentWidth="240"
+                                                      ItemChangedCommand="{Binding ItemChangedCommand, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                                                      Margin="0,5,0,0"
+                                                      Height="35"
+                                                      IsReadOnly="False" RenderTransformOrigin="0.502,-0.488">
+                </KarveControls:DataField>
+                <KarveControls:DualFieldSearchBox x:Name="Concessionario" 
+                                           LabelText="Concessionario" 
                                           Height="25" 
                                           Margin="0,5,0,0"
                                           AssistDataFieldFirst="NUM_PROVEE"
@@ -70,7 +58,20 @@
                                           TextContentFirstWidth="60" 
                                           TextContentSecondWidth="150"
                                           ButtonImage="/KarveCar;component/Images/search.png"/>
+                <DockPanel>
+                    <KarveControls:DataDatePicker DockPanel.Dock="Left" LabelText="Fecha Alta" 
+                                                  DataDatePickerHeight="35"
+                                                  LabelTextWidth="60">
+                    </KarveControls:DataDatePicker>
+
+                    <KarveControls:DataDatePicker  DockPanel.Dock="Right" 
+                                                   LabelText="Fecha Baja" 
+                                                  LabelTextWidth="60"  
+                                                  DataDatePickerHeight="35"/>
+                   
+                </DockPanel>
+                <KarveControls:DataArea DataAreaTitle="Observaciones" DataAreaWidth ="300"></KarveControls:DataArea>
             </StackPanel>
-        </GroupBox>
+        </GroupBox> 
     </Grid>
 </UserControl>
