--- a/src/Controls/KarveControls/DualFieldSearchBox/DualFieldSearchBox.xaml
+++ b/src/Controls/KarveControls/DualFieldSearchBox/DualFieldSearchBox.xaml
@@ -8,12 +8,13 @@
              xmlns:karveGrid="clr-namespace:KarveControls.KarveGrid"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:column="clr-namespace:KarveControls.KarveGrid.Column"
+             xmlns:Syncfusion="http://schemas.syncfusion.com/wpf"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
         
         
-        <StackPanel Orientation="Horizontal" x:Name="LayoutRoot">
+        <StackPanel  Orientation="Horizontal" x:Name="LayoutRoot">
             <TextBlock x:Name="SearchLabel" Text="{Binding Path=LabelText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="50" Margin="10,0,0,0"></TextBlock>
             <TextBox x:Name="SearchTextFirst" Text="{Binding Path=TextContentFirst, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
             <TextBox x:Name="SearchTextSecond" Text="{Binding Path=TextContentSecond, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" IsReadOnly="{Binding Path=IsReadOnly}"></TextBox>
@@ -22,7 +23,98 @@
                 <Button Name="PopUpButton" Click="PopUpButton_OnClick" HorizontalAlignment="Left" Background="Lavender">
                     <Image Name="PopUpButtonImage" Source="{Binding Path=ButtonImage, PresentationTraceSources.TraceLevel=High}" Height="18"/>
                 </Button>
-                <Popup Name="Popup">
+
+                
+                <!--PlacementTarget="{Binding ElementName=mainGrid}"-->
+                <!-- PlacementTarget="{Binding ElementName=mainGrid}"
+                    -->
+             <!--  <Canvas Name="Grid">
+                    IsOpen="False"
+
+                       AllowsTransparency="True"
+
+                       StaysOpen="False"
+
+                       PopupAnimation="Scroll"
+
+                       HorizontalAlignment="Right"
+
+                       HorizontalOffset="30" VerticalOffset="30" 
+                
+                    </Canvas>
+                -->
+                
+             
+                
+                    <Popup x:Name="Popup" 
+                       
+                    Placement="Relative"
+                    PlacementTarget="{Binding ElementName=MainWindow}"
+                      >
+
+                    <Border  HorizontalAlignment="Stretch"
+
+                            VerticalAlignment="Stretch"
+
+                            BorderBrush="#FF000000" 
+
+                            BorderThickness="3" 
+
+                            CornerRadius="5,5,5,5">
+
+                        <Grid>
+
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="40"/>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+
+                            <Thumb Grid.Row="0" Width="Auto" Height="40" 
+
+                                   Tag="{Binding ElementName=Popup}"
+
+                                   local:PopupMovableBehaviour.IsMoveEnabledProperty="true">
+                                <Thumb.Template>
+                                    <ControlTemplate>
+                                        <Border  Width="Auto" Height="40" 
+
+                                                 BorderBrush="#FF000000" 
+
+                                                 Background="Black" VerticalAlignment="Top" 
+
+                                                 CornerRadius="5,5,0,0" Margin="-2,-2,-2,0">
+
+                                           
+                                        </Border>
+                                    </ControlTemplate>
+                                </Thumb.Template>
+                            </Thumb>
+
+
+                            <karveGrid:KarveGridView x:Name="MagnifierGrid" Grid.Row="1" MinHeight="400" MinWidth="600" ColumnWidth="200" 
+                                                     SourceView="{Binding SourceView}" SelectionRowChanged="MagnifierGrid_OnSelectionRowChanged">
+
+
+                            </karveGrid:KarveGridView>
+
+
+
+                            <Button Grid.Row="2" Margin="10" Click="ButtonBase_OnClick">Close</Button>
+                            
+                            
+
+                    
+                                    
+                               
+                        
+                        </Grid>
+
+                    </Border>
+                </Popup>
+                    
+                        <!--
+                <Popup x:Name="Popup">
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition></RowDefinition>
@@ -37,6 +129,7 @@
                         <Button Grid.Row="1" Margin="10" Click="ButtonBase_OnClick">Close</Button>
                     </Grid>
                 </Popup>
+                -->
             </StackPanel>
            
         </StackPanel>
