--- a/src/Modules/MasterModule/Views/CommissionAgentControlView.xaml
+++ b/src/Modules/MasterModule/Views/CommissionAgentControlView.xaml
@@ -42,12 +42,7 @@
                                ItemsSource="{Binding SummaryView, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                AutoGenerateColumns="False">
 
-<!--
-                 grid:KarveGridExt.DefaultColumnsSize="{Binding DefaultColumnsSize, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
-                               grid:KarveGridExt.ResizeColumnCommand="{Binding GridResizeCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" 
-                              
-                      
-            -->
+
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="MouseDoubleClick">
                     <i:InvokeCommandAction Command="{Binding OpenItem}" CommandParameter="{Binding ElementName=SupplierSummary, Path=SelectedItem}"/>
@@ -72,18 +67,10 @@
                                            AllowEditing="True"
                                            AllowGrouping="True"/>
 
-                <Syncfusion:GridTemplateColumn HeaderText="{Binding lnombre, Source={StaticResource ResourceLanguage}}" MappingName="Nombre"
+                <Syncfusion:GridTextColumn HeaderText="{Binding lnombre, Source={StaticResource ResourceLanguage}}" MappingName="Nombre"
                                                FilterPopupStyle="{StaticResource GenericCodeStyle}">
-                    <Syncfusion:GridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <TextBlock FontStyle="Italic"
-                                       FontWeight="SemiBold"
-                                       Padding="2,0"
-                                       Text="{Binding lnombre, Source={StaticResource ResourceLanguage}}" />
-                        </DataTemplate>
-                    </Syncfusion:GridTemplateColumn.CellTemplate>
-
-                </Syncfusion:GridTemplateColumn>
+                   
+                </Syncfusion:GridTextColumn>
 
                 <Syncfusion:GridTextColumn HeaderText="{Binding lpersona, Source={StaticResource ResourceLanguage}}" MappingName="Persona" FilterPopupStyle="{StaticResource GenericCodeStyle}"/>
                 <Syncfusion:GridTextColumn HeaderText="{Binding lnif, Source={StaticResource ResourceLanguage}}" MappingName="Nif" FilterPopupStyle="{StaticResource GenericCodeStyle}"/>
@@ -94,30 +81,7 @@
             </Syncfusion:SfDataGrid.Columns>
 
         </Syncfusion:SfDataGrid>
-        <!--
-        <karveGrid:KarveGridView x:Name="ProviderSupplierSummary" PageSize="25" Grid.IsSharedSizeScope="True"
-                                                 ReadOnly="True" ColumnWidth="100" SourceView="{Binding SummaryView}">
-                <i:Interaction.Triggers>
-                    <i:EventTrigger EventName="RowMouseDoubleClick">
-                        <i:InvokeCommandAction Command="{Binding OpenItem}" CommandParameter="{Binding ElementName=ProviderSupplierSummary, Path=SelectedRow}"/>
-                    </i:EventTrigger>
-                </i:Interaction.Triggers>
-
-                
-                </karveGrid:KarveGridView>
-       -->
+        
     </Grid>
-    <!--
-    <Grid>
-        <karveGrid:KarveGridView x:Name="CommissionAgentSummary" PageSize="25" Grid.IsSharedSizeScope="True"
-                                      ReadOnly="True" ColumnWidth="100" SourceView="{Binding SummaryView}">
-                <i:Interaction.Triggers>
-                    <i:EventTrigger EventName="RowMouseDoubleClick">
-                        <i:InvokeCommandAction Command="{Binding OpenItem}" CommandParameter="{Binding ElementName=CommissionAgentSummary, Path=SelectedRow}"/>
-                    </i:EventTrigger>
-                </i:Interaction.Triggers>
-       </karveGrid:KarveGridView>
-       
-    </Grid>
-    -->
+   
 </UserControl>
